Implement dashboard layout

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,8 +1,45 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    <title>Main Page</title>
-    </head>
-    <body>
-    Hello, World!
-    </body>
+<head>
+        <title>Dashboard</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+        <div class="container">
+                <div class="main">
+                    <div class="title"> Secret Dashboard </div>
+                    <div class="map"> Map </div>
+                    <div class="footer"> Footer </div>
+                </div>
+                <div class="sideInfo">
+                        <div class="sideBlock sideBlockImage">
+                            Image  
+                        </div>
+                        <div class="sideBlock"> 
+                                <div class="sideBlockSteps">  
+                                        23000
+                                </div>
+                                <div class="sideBlockSteps">  
+                                        Image                               
+                                </div>
+                                <div class="sideBlockSteps"> 
+                                        footsteps                                                               
+                                </div>
+                        </div>
+                        <div class="sideBlockBottom"> 
+                                <div class="sideBlockCalories"> 
+                                        10000
+                                </div>
+                                <div class="sideBlockCalories"> 
+                                        Image                             
+                                </div>
+                                <div class="sideBlockCalories"> 
+                                        calories                                                           
+                                </div>
+                        </div>
+                </div>
+        </div>
+</body>
 </html>
+
+
