Modify mongoose models
This modifies the booth model to accomodate other shapes for an SVG.
This also modifies the event model. Change from `eventDescription` to `eventName`.
Added in mock data js files for easier testing and replication of data.

--- a/containers/map-api/public/addBooth.html
+++ b/containers/map-api/public/addBooth.html
@@ -11,8 +11,8 @@
     <input id="unit" name="unit" placeholder="Unit Name">
     <input id="description" name="description" placeholder="Description">
     <input id="measurementUnit" name="measurementUnit" placeholder="Measurement Unit">
-    <input id="xDimension" type="number" name="xDimension" placeholder="X (Length)">
-    <input id="yDimension" type="number" name="yDimension" placeholder="Y (Width)">
+    <input id="width" type="number" name="width" placeholder="Width">
+    <input id="height" type="number" name="height" placeholder="Height">
     <input id="x" type="number" name="x" placeholder="X Location">
     <input id="y" type="number" name="y" placeholder="Y Location">
     <input id="contact" name="contact" placeholder="Contact">
