--- a/containers/map-api/public/addEvent.html
+++ b/containers/map-api/public/addEvent.html
@@ -8,7 +8,7 @@
     / <a href="/booth/list">Booth List</a> / <a href="/beacon/list">Beacon List</a> / <a href="/event/list">Event List</a>
     <p>Hello, Event!</p>
     <input id="eventId" name="eventId" placeholder="Event ID" >
-    <input id="eventDescription" name="eventDescription" placeholder="Event Description">
+    <input id="eventName" name="eventName" placeholder="Event Name">
     <input id="location" name="location" placeholder="Location">
     <input id="startDate" type="date" name="startDate" placeholder="Start Date">
     <input id="endDate" type="date" name="endDate" placeholder="End Date">
