Add feature for backend serving SVG and PDF
This commit adds the feature for the backend serving an SVG.
The backend will also serve a PDF version of it.
The PDF version will be used by the iOS app for Indoor Location.

--- a/containers/map-api/public/index.html
+++ b/containers/map-api/public/index.html
@@ -13,6 +13,8 @@
       <li>/beacons/:beaconId</li>
       <li>/booths/:boothId</li>
       <li>/events/:eventId</li>
+      <li>/svg/:eventId</li>
+      <li>/svg/:eventId/pdf</li>
     </ul>
     <p>POST</p>
     <ul>
