Update font and svg positioning
* Updated font from sans-serifs to Fredoka One
* Fix circle svg positioning

Signed-off by: Darryl Balderas < drrylbalderas@gmail.com >

--- a/containers/front-end/src/index.html
+++ b/containers/front-end/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Freckle+Face" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
