--- a/containers/blockchain/testApplication/public/history.html
+++ b/containers/blockchain/testApplication/public/history.html
@@ -34,7 +34,7 @@
     </div>
   </body>
 </html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/web-socket-js/1.0.0/web_socket.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="./scripts/events.js"></script>
