--- a/containers/blockchain/testApplication/public/test.html
+++ b/containers/blockchain/testApplication/public/test.html
@@ -30,25 +30,23 @@
           <tbody>
             <tr style='width: 100%'>
               <td >Type :</td>
-              <td><input style='width: 50%' type="text" id="type"/></td>
+              <td><input style='width: 50%' id="type"/></td>
             </tr>
             <tr style='width: 100%'>
               <td >User Id :</td>
-              <td><input style='width: 50%' type="text" id="userId"/></td>
+              <td><input style='width: 50%' id="userId"/></td>
             </tr>
             <tr style='width: 100%'>
               <td >Function Name :</td>
-              <td><input style='width: 50%' type="text" id="fcn"/></td>
+              <td><input style='width: 50%' id="fcn"/></td>
             </tr>
             <tr style='width: 100%'>
               <td s="s">Args :</td>
-              <td><input style='width: 50%' type="text" id="argsValues"/></td>
+              <td><input style='width: 50%' id="argsValues"/></td>
             </tr>
             <tr style='width: 100%'>
               <td>
-                <center>
-                  <button onclick="amqpFunc()">Request Server</button>
-                </center>
+                <button id="request_server">Request Server</button>
               </td>
               <td ></td>
             </tr>
@@ -60,7 +58,7 @@
           <thead>
             <tr style="width: 100%">
               <th>
-                <center>Query Results</center>
+                <h1>Query Results</h1>
               </th>
             </tr>
           </thead>
